# fastapi-backend

./: .gitignore  alembic.ini  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 22878fb9ab51_create_posts_table.py  5a6c97f5f229_add_table_email_and_password_users.py  ede6bfc452b4_create_users_table.py
app/: main.py
app/controllers/: auth_controller.py  post_controller.py  user_controller.py
app/core/: database.py
app/dependencies/: auth.py  post.py  user.py
app/models/: __init__.py  table.py  user.py
app/repositories/: __init__.py  post.py  user.py
app/routers/: __init__.py  auth_router.py  post_router.py  user_router.py
app/schemas/: __init__.py  auth.py  post.py  user.py
app/services/: auth.py  post.py  user.py
app/utils/: security.py
